app/css/style.css
/* ... */
.buttonWrapper:hover {
  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
  transform: translateY(-0.125rem);
}

.buttonPsmall {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  min-width: 75px;
}

.buttonPnormal {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
  min-width: 120px;
}

.buttonColorSolid {
  background-color: rgb(14 165 233);
  color: white;
}
.buttonColorSolid:hover {
  background-color: rgb(2 132 199);
}

.buttonColorOutline {
  border-width: 1px;
  border-color: rgb(2 132 199);
  color: rgb(2 132 199);
}
.dark .buttonColorOutline {
  border-color: rgb(255 255 255);
  color: white;
}

/* Bricks > Layout > Footer */
.FooterSection {
  background-color: #f9fafb;
}

.dark .FooterSection {
  background-color: rgb(17 24 39);
}

.FooterContainer {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  padding-top: 3rem;
  padding-bottom: 3rem;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}

.FooterElementsInfo {
  width: 100%;
  margin-bottom: 3rem;
}

.FooterLinkLogo {
  display: block;
  margin-bottom: 1rem;
}

.FooterImageLogo {
  width: 12rem;
  height: 1.75rem;
  object-fit: contain;
  object-position: left;
}

.FooterParagraphRichText {
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: rgb(107 114 128);
}

.dark .FooterParagraphRichText {
  color: white;
}

.FooterRenderLink {
  color: rgb(14 165 233);
  transition-property: all;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 150ms;
}

.FooterRenderLink:hover {
  color: rgb(2 132 199);
  transform: translateY(-1px);
}

@media (min-width: 640px) {
  .FooterContainer {
    margin-left: 5.55555%;
    margin-right: 5.55555%;
  }
}

@media (min-width: 1280px) {
  .FooterContainer {
    margin-left: 11.1111%;
    margin-right: 11.1111%;
  }
}

@media (min-width: 1024px) {
  .FooterElementsInfo {
    width: auto;
    margin-bottom: 0px;
    margin-right: 2rem;
  }

  .FooterContainer {
    padding-top: 4rem;
    padding-bottom: 4rem;
  }
}

/* Bricks > Layout > FooterColumn */
.FooterColumnContainer {
  width: 50%;
  margin-bottom: 2rem;
}

@media (min-width: 640px) {
  .FooterColumnContainer {
    width: auto;
    margin-right: 2rem;
  }
}

.FooterColumnText {
  margin-bottom: 0.75rem;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 900;
  text-transform: uppercase;
  letter-spacing: 0.35em;
  min-width: 120px;
  color: rgb(156 163 175);
}

.dark .FooterColumnText {
  color: rgb(243 244 246);
}

/* Bricks > Layout > FooterLink */
.FooterLinkText {
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-bottom: 0.75rem;
  color: rgb(107 114 128);
  transition-property: all;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 150ms;
}

.FooterLinkText:hover {
  color: rgb(75 85 99);
  transform: translateY(-1px);
}

.dark .FooterLinkText {
  color: white;
}

/* Bricks > Layout > Header */
.HeaderSection {
  background-color: white;
}

.dark .HeaderSection {
  background-color: rgb(17 24 39);
}

.HeaderNavClass {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1.25rem;
}

.HeaderLinkLogo {
  display: inline-flex;
  padding-top: 0.375rem;
  padding-bottom: 0.375rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  margin-right: 1.5rem;
}

.HeaderImageClass {
  display: block;
  width: 8rem;
  height: 1.75rem;
  object-fit: contain;
  object-position: left;
}

.HeaderContainerMenuItems {
  display: none;
  align-items: center;
}
.HeaderContainerMenuItems > :not([hidden]) ~ :not([hidden]) {
  margin-left: 0.5rem;
}

.HeaderContainerButtons {
  display: none;
  margin-left: auto;
}

.HeaderButtonsWrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
}

.HeaderButtonsWrapper > :not([hidden]) ~ :not([hidden]) {
  margin-left: 1.25rem;
}

.HeaderContainerHamburgerMenu {
  position: relative;
  margin-left: auto;
  display: flex;
  height: 100%;
  align-items: center;
}

.HeaderButtonHamburgerMenu {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0.25rem;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 5px;
  background-color: #efefef;
}

.HeaderButtonHamburgerMenu:hover {
  background-color: rgb(14 165 233 / 0.2);
  color: rgb(2 132 199);
}

.HeaderButtonHamburgerMenu:focus {
  background-color: rgb(14 165 233 / 0.2);
  color: rgb(2 132 199);
}

.dark .HeaderButtonHamburgerMenu {
  color: rgb(229 231 235);
  background-color: transparent;
}
.dark .HeaderButtonHamburgerMenu:hover {
  background-color: rgb(14 165 233/0.4);
}

.dark .HeaderButtonHamburgerMenu:focus {
  background-color: rgb(14 165 233/0.4);
}

.HeaderContainerHamburgerMenuItems {
  position: absolute;
  top: 2rem;
  right: 0px;
  width: 16rem;
  background-color: white;
  padding: 1.25rem;
  border-width: 1px;
  border-radius: 0.5rem;
  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
  z-index: 10;
}

/*.dark .HeaderContainerHamburgerMenuItems {
  background-color: rgb(17 24 39);
  border-color: rgb(156 163 175);
}*/

.darkModeButtonMobile {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: transparent;
  color: rgb(156 163 175);
}

.darkModeButtonDesktop {
  display: none;
  background-color: transparent;
}

.darkModeButtonMobile,
.darkModeButtonDesktop {
  width: 2rem;
  height: 2rem;
  margin-right: 1rem;
  cursor: pointer;
}

.dark .darkModeButtonMobile,
.dark .darkModeButtonDesktop {
  color: rgb(229 231 235);
}

@media (min-width: 640px) {
  .HeaderNavClass {
    margin-left: 5.55555%;
    margin-right: 5.55555%;
  }

  .darkModeButtonMobile,
  .darkModeButtonDesktop {
    margin-right: 0;
    margin-left: 1rem;
  }

  .HeaderContainerHamburgerMenu {
    gap: 10px;
  }
}
/* ... */

